<resources>
    <string name="nav_header_discover">Discover</string>
    <string name="nav_header_manage">Manage</string>
    <string name="nav_header_customization">Customization</string>
    <string name="nav_header_support">Support</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About</string>
    <string name="action_search">Search</string>
    <string name="title_activity_media_list">Media list</string>
    <string name="action_filter">@string/drawer_title_filter</string>
    <string name="action_help">Help</string>
    <string name="composer_add_image_description">Add image</string>
    <string name="composer_add_video_description">Add video</string>
    <string name="composer_add_link_description">Add link</string>
    <string name="composer_add_youtube_description">Add YouTube video</string>
    <string name="composer_add_gif_description">Add GIF</string>
    <string name="composer_add_emoticon_description">Add emoticon</string>
    <string name="composer_more_actions_description">More composer actions</string>
    <string name="composer_post">Post</string>
    <string name="composer_reply_recipient_description">Reply recipient</string>
    <string name="composer_reply_to">Replying to %s</string>
    <string name="composer_reply_hint">Add to thread...</string>
    <string name="composer_send_description">Send</string>
    <string name="composer_sending_description">Sending</string>
    <string name="action_mode_selected">Selected: %d</string>
    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="text_popularity"> Popularity: %d</string>
    <string name="app_description">
        <![CDATA[
        AniTrend is an AniList android client that helps you manage your manga and anime lists from your mobile device.
        AniTrend offers many features that make it easier for you to discover anime or manga by making content easily available.\n\n
        Most of the basic anime or manga management features have been ported to AniTrend to improve the users experience!
        ]]>
    </string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Ok">OK</string>
    <string name="Loading">Loading</string>
    <string name="Sending">Sending</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Apply">Apply</string>
    <string name="Reset">Reset</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Go_Back">Go Back</string>
    <string name="Retry">Retry</string>
    <string name="Watch">Watch</string>
    <string name="get_started">Get Started</string>
    <string name="action_onboarding_continue">Continue</string>
    <string name="app_intro_colors_title">Color States</string>
    <string name="app_intro_colors_text">Colors Representing Anime/Manga Status!</string>
    <string name="app_intro_content_title">Content</string>
    <string name="app_intro_content_text">Multiple Anime &amp; Manga Listings!</string>
    <string name="app_intro_search_title">Searching</string>
    <string name="app_intro_search_text">Anime, Manga &amp; More Search Functionality!</string>
    <string name="app_intro_videos_title">Videos</string>
    <string name="app_intro_videos_text">Using Builtin Youtube Video Player!</string>
    <string name="app_greeting">Welcome to AniTrend, this is not a streaming app!</string>
    <string name="label_onboarding_status_watching">Watching</string>
    <string name="label_onboarding_status_completed">Completed</string>
    <string name="label_onboarding_status_plan_to_watch">Plan to Watch</string>
    <string name="label_onboarding_status_dropped">Dropped</string>
    <string name="label_onboarding_status_on_hold">On Hold</string>
    <string name="label_onboarding_status_rewatching">Rewatching</string>
    <string name="placeholder_onboarding_search">Search anime, manga...</string>
    <string name="label_onboarding_search_result_jujutsu_kaisen">Jujutsu Kaisen</string>
    <string name="label_onboarding_search_result_one_piece">One Piece</string>
    <string name="description_onboarding_welcome">Discover new favourites, track your progress, and keep every anime and manga list in one place.</string>
    <string name="description_onboarding_colors">Quickly identify what you\'re watching, completed, or planning to watch with intuitive color coding at a glance.</string>
    <string name="description_onboarding_content">Browse thousands of titles with detailed info, ratings, seasonal charts, and staff credits - updated daily.</string>
    <string name="description_onboarding_searching">Powerful search with filters by genre, year, studio, and status - find exactly what you\'re looking for.</string>
    <string name="title_onboarding_manage">Manage Your List</string>
    <string name="description_onboarding_manage">Long-press any anime or manga to manage its status, progress, and details.</string>
    <string name="app_filter_sort">Sort By?</string>
    <string name="app_filter_on_list">On My List?</string>
    <string name="app_filter_order">Order By?</string>
    <string name="app_filter_genres">Series Genres?</string>
    <string name="app_filter_show_type">Series Type?</string>
    <string name="app_filter_year">Series Year</string>
    <string name="app_filter_status">Display Only?</string>
    <string name="app_splash_api_unavailable">Unable to connect to server :( Swipe Down To Retry!</string>
    <string name="app_splash_authentication_failed">Auth Failed. Swipe Down To Retry!</string>
    <string name="app_splash_authenticating">Authenticating..</string>
    <string name="app_splash_fetching">Requesting Extra Data..</string>
    <string name="app_splash_profile">Requesting Profile..</string>
    <string name="app_splash_loading">Application Initializing..</string>
    <string name="app_splash_authenticating_message">
        <![CDATA[
        <p>
        <b>AniTrend</b> has failed to authenticate with the server more than once! Please check that your internet connection is
        working and also check if the <a href=\"https://anilist.co\"><b>AniList Website</b></a> is available before tapping YES!
        </p>

        If the website is available then would you like <b>AniTrend</b> to reset itself by signing you out, assuming you were signed in before?
        You will just have to sign in again.
        ]]>
    </string>
    <string name="campaign_link">
        <![CDATA[
        Track all your favourite Anime & Manga with AniTrend\n\n
        Get it on Play Store:\n
        https://play.google.com/store/apps/details?id=com.mxt.anitrend
        ]]>
    </string>
    <string name="login_message">
        <![CDATA[
        <p>You can access more options such as Editing, Adding &
        Removing Anime or Manga items from your lists by long pressing the item to get more options.</p>

        You can also add/remove items from your favourites on your list by tapping the heart icon.
        ]]>
    </string>
    <string name="app_intro_guide">Tap a card to explore anime and manga. Sign in with AniList to manage your lists.</string>
    <string name="app_intro_title">Get started</string>
    <string name="login_welcome_title">Welcome %s</string>
    <string name="login_welcome_text">Your login was a success</string>
    <string name="drawer_title_home">Status Feeds</string>
    <string name="drawer_title_anime">Discover Anime</string>
    <string name="drawer_title_manga">Discover Manga</string>
    <string name="drawer_title_trending">What\'s Trending</string>
    <string name="drawer_title_airing">Airing Anime</string>
    <string name="drawer_title_myanime">My Anime List</string>
    <string name="drawer_title_mymanga">My Manga List</string>
    <string name="drawer_title_reviews">Series Reviews</string>
    <string name="drawer_title_hub">AniTrend Hub</string>
    <string name="drawer_section_configuration">Configuration</string>
    <string name="drawer_title_filter">Filter</string>
    <string name="drawer_section_account">Account</string>
    <string name="drawer_title_sign_in">Sign In</string>
    <string name="drawer_title_profile">Profile</string>
    <string name="drawer_title_sign_out">Sign Out</string>
    <string name="drawer_section_extras">Extras</string>
    <string name="drawer_title_share">Share</string>
    <string name="drawer_title_update">Update</string>
    <string name="layout_empty_response">No data to display</string>
    <string name="tip_options_text">Get access to the application settings, help, changelog and post activity status. \n\nTap Here To Dismiss</string>
    <string name="tip_options_title">Options Menu</string>
    <string name="tip_search_title">Search Bar</string>
    <string name="tip_search_message">Search for various anime &amp; manga listings, searchable by name keywords. \n\nTap Here To Dismiss</string>
    <string name="tip_navigation_title">Navigation</string>
    <string name="tip_navigation_text">Access the navigation drawer to view different content with in the application. \n\nTap Here To Dismiss</string>
    <string name="tip_series_options_message">Favourite, add to your list and share this current listing with friends. \n\nTap Here To Dismiss</string>
    <string name="tip_series_options_title">Options Available</string>
    <string name="tip_character_options_title">Favourite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary">Configure basic application behavior</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_notifications_summary">Configure how notifications are handled</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_data_sync_summary">Configure the notification check frequency</string>
    <string name="menu_title_sorting">Sorting</string>
    <string name="menu_title_order">Order</string>
    <string name="menu_title_genres">Genres</string>
    <string name="menu_title_formats">Types</string>
    <string name="menu_title_year">Year</string>
    <string name="menu_title_status">Status</string>
    <string name="menu_title_new_activity_post">New Activity Post</string>
    <string name="menu_title_changelog">Changelog</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_help">Help</string>
    <string name="text_attach_link">Attach Link</string>
    <string name="text_attach_image">Attach Image</string>
    <string name="text_youtube_link">Youtube Link</string>
    <string name="text_webm_link">WebM Link</string>
    <string name="series_favourite_this">Favourite This</string>
    <string name="series_add_to_list">Add To list</string>
    <string name="series_share">Share</string>
    <string name="action_support">Support</string>
    <string name="series_share_complete">Detailed</string>
    <string name="series_share_summary">Summary</string>
    <string name="menu_title_tags">Tags</string>
    <string name="pref_header_privacy">Privacy</string>
    <string name="pref_header_privacy_summary">Configure privacy settings</string>
    <string name="pref_header_customize">Customize</string>
    <string name="pref_header_customize_summary">Customize the look and feel of the app</string>
    <string name="image_preview_download">Download</string>
    <string name="image_preview_share">Share</string>
    <string name="image_preview_link">Original Link</string>
    <string name="app_log">App Logs</string>
    <string name="pref_header_account">Account</string>
</resources>