<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_header_discover" android:title="@string/nav_header_discover">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:visible="false"
                    android:id="@+id/nav_home_feed"
                    android:icon="@drawable/ic_home_white_24dp"
                    android:title="@string/drawer_title_home" />
                <item
                    android:id="@+id/nav_anime"
                    android:icon="@drawable/ic_movie_white_24dp"
                    android:title="@string/drawer_title_anime" />
                <item
                    android:id="@+id/nav_manga"
                    android:icon="@drawable/ic_library_books_white_24dp"
                    android:title="@string/drawer_title_manga" />
                <item
                    android:id="@+id/nav_trending"
                    android:icon="@drawable/ic_bubble_chart_white_24dp"
                    android:title="@string/drawer_title_trending" />
                <item
                    android:id="@+id/nav_reviews"
                    android:icon="@drawable/ic_rate_review_white_24dp"
                    android:title="@string/drawer_title_reviews" />
            </group>
        </menu>
    </item>

    <item android:visible="false" android:id="@+id/nav_header_manage" android:title="@string/nav_header_manage">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_airing"
                    android:icon="@drawable/ic_hourglass_empty_white_24dp"
                    android:title="@string/drawer_title_airing"/>
                <item
                    android:id="@+id/nav_hub"
                    android:icon="@drawable/ic_group_work_white_24dp"
                    android:title="@string/drawer_title_hub" />
                <item
                    android:id="@+id/nav_myanime"
                    android:icon="@drawable/ic_live_tv_white_24dp"
                    android:title="@string/drawer_title_myanime" />
                <item
                    android:id="@+id/nav_mymanga"
                    android:icon="@drawable/ic_book_white_24dp"
                    android:title="@string/drawer_title_mymanga" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_section_extras">
        <menu>
            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/ic_person_white_24dp"
                android:title="@string/drawer_title_sign_in"/>
            <item
                android:visible="false"
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/drawer_title_sign_out" />
            <item
                android:id="@+id/nav_check_update"
                android:icon="@drawable/ic_cloud_download_white_24dp"
                android:title="@string/drawer_title_update"
                android:visible="@bool/display_update_channel_pref"
                app:actionLayout="@layout/action_view_update" />
        </menu>
    </item>
</menu>
