<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:breadCrumbTitle="Customization Settings"
        android:fragment="com.mxt.anitrend.view.activity.base.SettingsActivity$CustomizePreferenceFragment"
        android:icon="@drawable/ic_format_color_fill_grey_600_24dp"
        android:summary="@string/pref_header_customize_summary"
        android:title="@string/pref_header_customize" />

    <header
        android:breadCrumbTitle="General Settings"
        android:fragment="com.mxt.anitrend.view.activity.base.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_touch_app_grey_600_24dp"
        android:summary="@string/pref_header_general_summary"
        android:title="@string/pref_header_general" />

    <header
        android:breadCrumbTitle="Notification Settings"
        android:fragment="com.mxt.anitrend.view.activity.base.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_active_grey_600_24dp"
        android:summary="@string/pref_header_notifications_summary"
        android:title="@string/pref_header_notifications" />

    <header
        android:breadCrumbTitle="Sync Settings"
        android:fragment="com.mxt.anitrend.view.activity.base.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_grey_600_24dp"
        android:summary="@string/pref_header_data_sync_summary"
        android:title="@string/pref_header_data_sync" />

    <header
        android:breadCrumbTitle="Privacy Settings"
        android:fragment="com.mxt.anitrend.view.activity.base.SettingsActivity$PrivacyPreferenceFragment"
        android:icon="@drawable/ic_privacy_grey_600_24dp"
        android:summary="@string/pref_header_privacy_summary"
        android:title="@string/pref_header_privacy" />

</preference-headers>
