<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:visible="false"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/drawer_title_home" />
        <item
            android:id="@+id/nav_anime"
            android:icon="@drawable/ic_movie_white_24dp"
            android:title="@string/drawer_title_anime" />
        <item
            android:id="@+id/nav_manga"
            android:icon="@drawable/ic_library_books_white_24dp"
            android:title="@string/drawer_title_manga" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_bubble_chart_white_24dp"
            android:title="@string/drawer_title_trending" />
        <item
            android:visible="false"
            android:id="@+id/nav_airing"
            android:icon="@drawable/ic_hourglass_empty_white_24dp"
            android:title="@string/drawer_title_airing"/>
        <item
            android:visible="false"
            android:id="@+id/nav_myanime"
            android:icon="@drawable/ic_live_tv_white_24dp"
            android:title="@string/drawer_title_myanime" />
        <item
            android:visible="false"
            android:id="@+id/nav_mymanga"
            android:icon="@drawable/ic_book_white_24dp"
            android:title="@string/drawer_title_mymanga" />
        <item
            android:visible="false"
            android:id="@+id/nav_hub"
            android:icon="@drawable/ic_group_work_white_24dp"
            android:title="@string/drawer_title_hub" />
        <item
            android:visible="true"
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_rate_review_white_24dp"
            android:title="@string/drawer_title_anime_reviews"
            app:actionLayout="@layout/action_view_type"/>
    </group>

    <item android:title="@string/drawer_section_configuration">
        <menu>
            <item
                android:id="@+id/nav_filter"
                android:icon="@drawable/ic_filter_list_white_24dp"
                android:title="@string/drawer_title_filter" />
            <item
                android:id="@+id/nav_light_theme"
                android:icon="@drawable/ic_wb_sunny_white_24dp"
                android:checked="false"
                android:title="@string/drawer_light_theme"
                app:actionLayout="@layout/action_view_theme"
                />
            <item
                android:visible="false"
                android:id="@+id/nav_list_style"
                android:icon="@drawable/ic_style_white_24dp"
                android:checked="false"
                android:title="@string/drawer_title_style"
                app:actionLayout="@layout/action_view_style"
                />

        </menu>
    </item>

    <item android:title="@string/drawer_section_account">
        <menu>
            <item
                android:id="@+id/nav_account_action"
                android:icon="@drawable/ic_person_white_24dp"
                android:title="@string/drawer_title_sign_in"/>
            <item
                android:visible="false"
                android:id="@+id/nav_account_profile"
                android:icon="@drawable/ic_face_white_24dp"
                android:title="@string/drawer_title_profile"
                app:actionLayout="@layout/action_view_notification"/>
            <item
                android:visible="false"
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/drawer_title_sign_out" />
        </menu>
    </item>

    <item android:title="@string/drawer_section_extras">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/drawer_title_share" />
            <item
                android:id="@+id/nav_check_update"
                android:icon="@drawable/ic_cloud_download_white_24dp"
                android:title="@string/drawer_title_update"
                app:actionLayout="@layout/action_view_update" />
            </menu>
    </item>


</menu>
