<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_36dp"
        android:title="@string/menu_title_sorting" />

    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_filter_list_white_36dp"
        android:title="@string/menu_title_order" />

    <item
        android:id="@+id/action_genre"
        android:icon="@drawable/ic_loyalty_white_36dp"
        android:title="@string/menu_title_genres" />

    <item
        android:id="@+id/action_type"
        android:icon="@drawable/ic_multiline_chart_white_36dp"
        android:title="@string/menu_title_types" />

    <item
        android:id="@+id/action_year"
        android:icon="@drawable/ic_linear_scale_white_36dp"
        android:title="@string/menu_title_year" />

    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_compare_arrows_white_36dp"
        android:title="@string/menu_title_status" />

</menu>