<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="com.mxt.anitrend.MainActivity">

    <item
        android:id="@+id/action_create_post"
        android:orderInCategory="100"
        android:title="@string/menu_title_new_activity_post"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_changelog"
        android:orderInCategory="101"
        android:title="@string/menu_title_changelog"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/menu_title_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="104"
        android:title="@string/menu_title_help"
        app:showAsAction="never" />

</menu>