<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_link"
        android:icon="@drawable/ic_menu_link"
        android:title="@string/text_attach_link"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_image"
        android:icon="@drawable/ic_menu_image"
        android:title="@string/text_attach_image"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_youtube"
        android:icon="@drawable/ic_menu_youtube"
        android:title="@string/text_youtube_link"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_webm"
        android:icon="@drawable/ic_menu_webm"
        android:title="@string/text_webm_link"
        app:showAsAction="ifRoom"/>

</menu>