<?xml versionBase="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:title="@string/series_favourite_this"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        app:actionViewClass="com.mxt.anitrend.base.custom.view.widget.FavouriteToolbarWidget"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_manage"
        android:orderInCategory="101"
        android:title="@string/series_add_to_list"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/series_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share_full"
                android:title="@string/series_share_complete"
                android:icon="@drawable/ic_flip_to_front_grey_600_24dp"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_share_compact"
                android:title="@string/series_share_summary"
                android:icon="@drawable/ic_flip_to_back_grey_600_24dp"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>